<project>
  <modelVersion>4.0.0</modelVersion>

  <!-- project coordinates -->
  <groupId>chess-game</groupId>
  <artifactId>0</artifactId>
  <version>su2015-1.0</version>

  <!-- project properties -->
  <properties>
    <exec.mainClass>Main</exec.mainClass>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <!-- library dependencies -->
  <dependencies>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency> 
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.28</version>
    </dependency>

    <dependency>
      <groupId>com.beust</groupId>
      <artifactId>jcommander</artifactId>
      <version>1.78</version>
    </dependency>

  </dependencies>

  <build>
    <sourceDirectory>${project.basedir}/src</sourceDirectory>
    <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>12</release>
          <compilerArgs>
            <!--enable-preview-->
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>

    <resources>
      <resource>
        <directory>${project.basedir}/src/resources</directory>
      </resource>
    </resources>
  </build>
</project>
